[gd_scene load_steps=7 format=3 uid="uid://bp44vx2uh50m1"]

[ext_resource type="Script" path="res://Demos/PopulateItemList.gd" id="1"]
[ext_resource type="Theme" path="res://assets/theme/gdquest.theme" id="2"]
[ext_resource type="Texture2D" uid="uid://xgflvoosp2lk" path="res://assets/sprites/background.png" id="3"]
[ext_resource type="Script" path="res://Demos/DemoPickerUI.gd" id="4"]
[ext_resource type="Script" path="res://Demos/DemoPlayer.gd" id="5"]
[ext_resource type="Script" path="res://Demos/Demos.gd" id="6"]

[node name="Demos" type="Node"]
script = ExtResource("6")

[node name="DemoPlayer" type="Node2D" parent="."]
script = ExtResource("5")

[node name="DemoPickerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("4")

[node name="TextureRect" type="TextureRect" parent="DemoPickerUI"]
custom_minimum_size = Vector2(1024, 600)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DemoPickerUI"]
custom_minimum_size = Vector2(682, 0)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -290.0
offset_right = 341.0
offset_bottom = 290.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ItemList" type="ItemList" parent="DemoPickerUI/VBoxContainer"]
layout_mode = 2
auto_height = true
script = ExtResource("1")

[node name="Button" type="Button" parent="DemoPickerUI/VBoxContainer"]
custom_minimum_size = Vector2(280, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 13
text = "Load scene"

[node name="ButtonGoBack" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(280, 100)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -156.0
offset_right = 328.0
offset_bottom = -56.0
size_flags_horizontal = 4
size_flags_vertical = 13
theme = ExtResource("2")
text = "Go back"
